k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-k8s-service
spec:
  selector:
    app: node-k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
